fix SparkOptimizer get applicationId failed